flux-cluster/kv-store/deployment.yaml
---
# TODO: add restricted service account
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kv-store
  name: kv-store
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kv-store
  template:
    metadata:
      labels:
        app: kv-store
    spec:
      containers:
      - name: kv-store
        securityContext:
          runAsUser: 10001
          runAsGroup: 10001
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          # TODO: drop capabilities
        image: 722387802726.dkr.ecr.eu-central-1.amazonaws.com/kv_store:v0.0.1
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "64Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /_status
            port: 5000
        readinessProbe:
          httpGet:
            path: /_status
            port: 5000
      imagePullSecrets:
      - name: ecr-credentials
